<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="done">Done</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="email_address">Email address</string>
	<string name="password">Password</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="refresh">Refresh</string>
	<string name="about">About</string>
	<string name="unknown">Unknown</string>
	<string name="when_never">Never</string>
	<string name="when_5min">5 minutes</string>
	<string name="when_15min">15 minutes</string>
	<string name="when_30min">30 minutes</string>
	<string name="when_1hour">1 hour</string>
	<string name="when_2hours">2 hours</string>
	<string name="when_4hours">4 hours</string>
	<string name="ellipsis">&#8230;</string>
	<string name="zero">0</string>
	<string name="nbsp">&#160;</string>
	<string name="general_settings">General settings</string>
	<string name="account_settings">Account settings</string>
	<string name="account_settings_f">%1$s account settings</string>
	<string name="login_settings">Login settings</string>
	<string name="set_account_credentials">Set account username and password</string>
	<string name="notification_settings">Notification settings</string>
	<string name="select_ringtone">Select ringtone</string>
	<string name="account_email_already_exists">An account with this email address already exists</string>
	<string name="changes_saved">Changes saved.</string>
	<string name="account_created">Account created.</string>
	<string name="connecting">Connecting&#8230;</string>
	<string name="connection_error">Account verification error</string>
	<string name="connection_error_f">%1$s</string>
	<string name="connection_successful">Connection successful!</string>
	<string name="select_account">Select account</string>
	<string name="no_accounts">No accounts have been set up.\n\nTo set up an account now, press <b>Menu</b> and select <b>Add account</b>.</string>
	<string name="new_account">New account</string>
	<string name="add_a_new_account">Add a new account</string>
	<string name="erase_account_data">Erase all account data from this device? This action cannot be undone.</string>
	<string name="edit_account">Edit account</string>
	<string name="type_your_credentials_f">Type your %1$s email address and password:</string>
	<string name="error_invalid_credentials_f">Incorrect email address or password for %1$s</string>
	<string name="error_invalid_credentials">Incorrect email address or password</string>
	<string name="error_unexpected">An unexpected error has occurred</string>
	<string name="error_unexpected_f">Unexpected error: %1$s</string>
	<string name="error_timed_out">Server is taking too long to respond</string>
	<string name="error_json_parser_error">Unexpected response from server - please try again later</string>
	<string name="error_network_error">Network error - please check your Internet connection</string>
	<string name="error_dns_error">Name resolution error - please check your Internet connection</string>
	<string name="notify_message_pending_f">%1$s has an unread message from %2$s</string>
	<string name="notify_messages_pending_f">%1$s has %2$d unread messages on %3$s</string>
	<string name="notify_friend_online_f">%1$s is now online on %2$s</string>
	<string name="widget_could_not_be_added">Widget could not be added.</string>
	<string name="friend_online">Friend online</string>
	<string name="new_messages">New messages</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="account_edit_error">Unable to edit account. Please make sure you have the most up-to-date version of the software.</string>
    <string name="account_delete_error">Unable to delete account. Please make sure you have the most up-to-date version of the software.</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_new_account_f">Add a new %1$s account</string>
    <string name="select_account_type">Select account type</string>
    <string name="cannot_open_market">Error opening Android Market</string>
    <string name="cannot_open_f">Error opening application. Is it installed?</string>
    <string name="xbox_live_locale">en-US</string>
    <string name="app_name">Spark 360</string>
	<string name="app_version_format">version %1$s</string>
	<string name="app_by">2010&#8211;2014 Akop Karapetyan</string>
	<string name="app_website">http://www.spark360app.com/</string>
	<string name="app_ownership">This application is not produced, endorsed, or affiliated with the Microsoft Corporation. Microsoft, Xbox, Xbox Live, and the Xbox logos are trademarks of Microsoft Corporation.\n\nThis application is not produced, endorsed, or affiliated with the Sony Computer Entertainment, or Sony Corporation. PLAYSTATION, PlayStation, and PSN, are trademarks or registered trademarks of Sony Computer Entertainment Inc.</string>
	<string name="online">Online</string>
	<string name="offline">Offline</string>
	<string name="away">Away</string>
    <string name="pending">Pending</string>
    <string name="other">Other</string>
	<string name="account_summary">Account summary</string>
	<string name="friends_of_f">%1$s\'s friends</string>
	<string name="select_recipients">Select recipients</string>
	<string name="ms_point_utility">Microsoft Point utility</string>
	<string name="tools">Tools</string>
	<string name="toggle_all">Toggle all</string>
	<string name="gamertag">Gamertag</string>
	<string name="name">Name</string>
	<string name="location">Location</string>
	<string name="bio">Bio</string>
	<string name="zone">Zone</string>
	<string name="motto">Motto</string>
	<string name="reply">Reply</string>
	<string name="send">Send</string>
	<string name="achievement_help">Achievement help</string>
	<string name="visit_webpage">Visit web page</string>
	<string name="compare_games">Compare games</string>
	<string name="xbox_live">Xbox Live</string>
	<string name="rep">Rep</string>
	<string name="vibrate">Vibrate</string>
	<string name="vibrate_summary">Also vibrate on new notifications</string>
	<string name="games_played_u">Games Played</string>
	<string name="games_played">Games played</string>
	<string name="my_played_games">My Played Games</string>
	<string name="my_friends">My Friends</string>
	<string name="my_messages">My Messages</string>
	<string name="my_profile">My Profile</string>
	<string name="compose_message_u">Compose Message</string>
	<string name="compose_message">Compose message</string>
	<string name="achieves_x_of_x_f">%1$,d/%2$,d achievements</string>
	<string name="no_achievements">No achievements</string>
	<string name="game_history_empty">Your game history is empty.</string>
	<string name="no_games_to_compare">No games to compare.</string>
	<string name="game_has_no_achieves">This game has no achievements.</string>
	<string name="last_played">Last played</string>
	<string name="last_played_f">Last played %1$s</string>
	<string name="x_f">%1$,d</string>
    <string name="x_percent">%1$d%%</string>
	<string name="x_of_x_f">%1$s/%2$s</string>
	<string name="gamerscore">Gamerscore</string>
	<string name="acquired_f">Unlocked %1$s</string>
	<string name="acquired_offline">Unlocked</string>
	<string name="locked">Locked</string>
	<string name="unlocked">Unlocked</string>
	<string name="achievements_of_f">%1$s Achievements</string>
	<string name="achievements_unlocked">Achievements unlocked</string>
	<string name="gamerscore_unlocked">Gamerscore unlocked</string>
	<string name="google_achievements_f">\"%1$s\" achievement guide</string>
	<string name="google_achievement_f">\"%1$s\" \"%2$s\" achievement help</string>
	<string name="no_games_played">No games played</string>
	<string name="compare_games_vs_f">%1$s: Compare Games</string>
	<string name="compare_x_achieves_vs_f">%1$s: Compare %2$s Achievements</string>
    <string name="no_game_selected">No game selected</string>
	<string name="last_updated_f">Last updated %1$s</string>
	<string name="not_yet_updated">Not yet updated</string>
	<string name="remove_from_friends_q_f">Remove %1$s from friends?</string>
	<string name="remove_from_friends">Remove from friends</string>
	<string name="accept_friend_request">Accept friend request</string>
	<string name="decline_friend_request">Decline friend request</string>
	<string name="cancel_friend_request">Cancel friend request</string>
	<string name="no_friends">You have no friends :(</string>
	<string name="updating_friends">Updating friends&#8230;</string>
	<string name="added_friend_to_friend_list_f">You have added %1$s to your friends list.</string>
	<string name="removed_friend_from_friend_list_f">You have removed %1$s from your friends list.</string>
	<string name="cancelled_friend_request_to_f">You have canceled friend request to %1$s.</string>
	<string name="accepted_friend_request_from_f">You have accepted friend request from %1$s.</string>
	<string name="declined_friend_request_from_f">You have declined friend request from %1$s.</string>
	<string name="request_queued">Your request has been queued</string>
	<string name="friends_online">Friends Online</string>
	<string name="friends_f">Friends: %1$s</string>
	<string name="message_from_f">Message from %s</string>
	<string name="message_sent">Message sent</string>
	<string name="message_deleted">Message deleted</string>
	<string name="to_f">To: %1$s</string>
	<string name="delete_message_q">Delete message?</string>
	<string name="delete_message_from_f">Delete message from %1$s?</string>
	<string name="message_list_is_empty">No messages.</string>
	<string name="account_cant_send">This account does not support messaging.</string>
	<string name="message_could_not_be_sent">Message could not be sent</string>
	<string name="message_could_not_be_deleted">Message could not be deleted</string>
	<string name="message_queued_for_send">Your message is being sent</string>
	<string name="message_queued_for_delete">Message queued for deletion</string>
	<string name="message_not_found">Message not found</string>
	<string name="new_message">New message</string>
	<string name="compose_new_message">Compose new message</string>
	<string name="compose_not_available">This account cannot send messages</string>
	<string name="messages_unread">Messages Unread</string>
	<string name="error_message_retrieval">Error retrieving messages. Please try again in a moment</string>
    <string name="error_friend_retrieval">Error retrieving list of friends. Please try again in a moment</string>
	<string name="error_games_retrieval">Error retrieving list of games. Please try again in a moment</string>
    <string name="error_achieves_retrieval">Error retrieving list of achievements. Please try again in a moment</string>
	<string name="update_frequency">Update frequency</string>
	<string name="friend_notifications">Friend notifications</string>
	<string name="beacon_notifications">Beacon notifications</string>
	<string name="message_notifications">Message notifications</string>
	<string name="message_notifications_summary">Notify when new messages arrive</string>
	<string name="view_friends">View friends</string>
    <string name="view_settings">View settings</string>
    <string name="settings_coverflow">Coverflow</string>
	<string name="show_apps">Show apps</string>
	<string name="show_apps_summary">Show or hide zero-achievement titles</string>
    <string name="coming_soon">Show titles coming soon</string>
    <string name="out_now">Show titles out now</string>
    <string name="order_by_reldate">Order by release date</string>
    <string name="order_by_alpha">Order alphabetically by title</string>
    <string name="select_console">Select console</string>
    <string name="console_colon">Console:</string>
</resources>