<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/account_test.xml
 - Copyright (C) 2010-2014 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client.
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<View 
		android:layout_width="fill_parent" 
		android:layout_height="100sp" 
	/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp"
	>
		<TextView 
			android:id="@+id/account_setup_test_message" 
			android:text="@string/connecting"
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:gravity="center_horizontal" 
			android:textAppearance="@style/TextAppearance.cafLargeMessage"
			android:paddingBottom="5dp"
		/>
		<ProgressBar 
			android:id="@+id/account_setup_test_progress"
			android:indeterminate="true"
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			style="?android:attr/progressBarStyleHorizontal"
		/>
	</LinearLayout>
	<View
		android:layout_width="fill_parent" 
		android:layout_height="0px" 
		android:layout_weight="1"
	/>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="54dip"
		android:background="@drawable/stock_bottom_bar"
	>
		<Button 
			android:id="@+id/account_setup_test_cancel"
			android:text="@string/back"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:minWidth="@dimen/button_minWidth" 
			android:layout_alignParentLeft="true" 
			android:layout_centerVertical="true" 
		/>
		<Button 
			android:id="@+id/account_setup_test_next"
			android:text="@string/done"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			android:minWidth="@dimen/button_minWidth" 
			android:layout_alignParentRight="true" 
			android:layout_centerVertical="true"
			android:enabled="false" 
		/>
	</RelativeLayout>
</LinearLayout>
