<?xml version="1.0" encoding="utf-8"?>
<!--  
 - layout/xbl_gamercard_widget.xml
 - Copyright (C) 2010-2014 Akop Karapetyan
 -
 - This file is part of Spark 360, the online gaming service client. 
 -
 -  This program is free software; you can redistribute it and/or modify
 -  it under the terms of the GNU General Public License as published by
 -  the Free Software Foundation; either version 2 of the License, or
 -  (at your option) any later version.
 -
 -  This program is distributed in the hope that it will be useful,
 -  but WITHOUT ANY WARRANTY; without even the implied warranty of
 -  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 -  GNU General Public License for more details.
 -
 -  You should have received a copy of the GNU General Public License
 -  along with this program; if not, write to the Free Software
 -  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 -  02111-1307  USA.
 -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/gamercard_widget_container"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:background="@drawable/xbox_appwidget_bg"
	android:orientation="vertical"
	android:focusable="true"
	android:clickable="true"
>
	<RelativeLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/xbox_appwidget_gamertag_gold"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
	>
		<TextView
			android:id="@+id/profile_gamertag"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:textAppearance="@style/TextAppearance.widgetGamertag" 
		/>
		<FrameLayout
			android:id="@+id/widget_loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_alignParentRight="true"
			android:visibility="gone"
			android:background="@color/xbox_widget_gold_bg"
		>
			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminate="true"
				android:padding="2dp"
				style="?android:attr/progressBarStyleSmall"
				android:layout_gravity="center_vertical"
			/>
		</FrameLayout>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@color/widget_bg"
		android:padding="5dp"
	>
		<ImageView 
			android:id="@+id/profile_gamerpic"
			android:src="@drawable/avatar_default"
			android:layout_width="64dip" 
			android:layout_height="64dip"
			android:layout_marginRight="5dp"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
		>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
			>
				<TextView 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:textAppearance="@style/TextAppearance.xboxWidgetText"
					android:text="@string/rep" 
				/>
				<LinearLayout 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="right"
				>
					<ImageView 
						android:id="@+id/profile_rep_star0"
						android:src="@drawable/xbox_ic_star0"
						android:layout_width="14dp" 
						android:layout_height="14dp"
					/>
					<ImageView 
						android:id="@+id/profile_rep_star1"
						android:src="@drawable/xbox_ic_star0"
						android:layout_width="14dp" 
						android:layout_height="14dp"
					/>
					<ImageView 
						android:id="@+id/profile_rep_star2"
						android:src="@drawable/xbox_ic_star0"
						android:layout_width="14dp" 
						android:layout_height="14dp"
					/>
					<ImageView 
						android:id="@+id/profile_rep_star3"
						android:src="@drawable/xbox_ic_star0"
						android:layout_width="14dp" 
						android:layout_height="14dp"
					/>
					<ImageView 
						android:id="@+id/profile_rep_star4"
						android:src="@drawable/xbox_ic_star0"
						android:layout_width="14dp" 
						android:layout_height="14dp"
					/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="1dp"
				android:layout_marginTop="2dp"
				android:layout_marginBottom="2dp"
				android:background="@color/xbox_widget_divider"
			/>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
				<TextView 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:textAppearance="@style/TextAppearance.xboxWidgetText"
					android:text="@string/gamerscore" 
				/>
				<LinearLayout
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:orientation="horizontal"
				>
					<TextView
						android:id="@+id/profile_gamerscore"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:textAppearance="@style/TextAppearance.xboxWidgetText"
					/>
					<ImageView 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:layout_marginLeft="4dp"
						android:layout_gravity="center_vertical"
						android:src="@drawable/xbox_g_widget"
					/>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="1dp"
				android:layout_marginTop="2dp"
				android:layout_marginBottom="2dp"
				android:visibility="invisible"
				android:background="@color/xbox_widget_divider"
			/>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="invisible"
			>
				<TextView 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:textAppearance="@style/TextAppearance.xboxWidgetText"
					android:text="@string/zone" 
				/>
				<TextView
					android:id="@+id/profile_zone"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:textAppearance="@style/TextAppearance.xboxWidgetText"
				/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="5dp"
	>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<TextView 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
				android:text="@string/achievements_unlocked" 
			/>
			<TextView
				android:id="@+id/profile_achievements_unlocked"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="1dp"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="2dp"
			android:background="@color/xbox_widget_divider"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<TextView 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
				android:text="@string/gamerscore_unlocked" 
			/>
			<TextView
				android:id="@+id/profile_gamerscore_unlocked"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="1dp"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="2dp"
			android:background="@color/xbox_widget_divider"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<TextView 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
				android:text="@string/last_played" 
			/>
			<TextView
				android:id="@+id/profile_last_played"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="1dp"
			android:layout_marginTop="2dp"
			android:layout_marginBottom="2dp"
			android:background="@color/xbox_widget_divider"
		/>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<TextView 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
				android:text="@string/games_played" 
			/>
			<TextView
				android:id="@+id/profile_games_played"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textAppearance="@style/TextAppearance.xboxWidgetText"
			/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
	>
		<ImageView 
			android:id="@+id/profile_game0"
			android:layout_width="42dip" 
			android:layout_height="59dip"
			android:layout_marginRight="4dip"
		/>
		<ImageView 
			android:id="@+id/profile_game1"
			android:layout_width="42dip" 
			android:layout_height="59dip"
			android:layout_marginRight="4dip"
		/>
		<ImageView 
			android:id="@+id/profile_game2"
			android:layout_width="42dip" 
			android:layout_height="59dip"
			android:layout_marginRight="4dip"
		/>
		<ImageView 
			android:id="@+id/profile_game3"
			android:layout_width="42dip" 
			android:layout_height="59dip"
			android:layout_marginRight="4dip"
		/>
		<ImageView 
			android:id="@+id/profile_game4"
			android:layout_width="42dip" 
			android:layout_height="59dip"
		/>
	</LinearLayout>
</LinearLayout>